<resources>
    <string name="app_name">BeSafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact">Contact</string>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">User Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stories_section">Stories Section</string>
    <string name="explore_section">Explore Section</string>
    <string name="hero_stories">Hero Stories</string>
    <string name="read_story_of_brave_women">Read story of brave women</string>
    <string name="eye_witness">EyeWitness</string>
    <string name="eyewitnesses_from_the_scene">Eyewitnesses from the scene</string>
    <string name="unsafe_areas">Praesent malesuada congue magna at finibus.
        In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend.
        Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id.</string>
    <string name="dangerous_areas_from_around_you">Dangerous areas from around you</string>
    <string name="donate">Donate</string>
    <string name="help_support_us_to_grow_bigger">Help support us to grow bigger</string>
    <string name="share_story">Share story</string>
    <string name="a_problem_shared_is_a_problem_solved">A problem shared is a problem solved</string>
    <string name="title_activity_user_profiles">UserProfiles</string>
    <string name="events">Events</string>
    <string name="view_events">View events</string>
    <string name="nearby_police_station">Nearby Police station</string>
    <string name="emergency_message">Tap to send emergency message</string>
    <string name="send_emergency">Emergency Message</string>
    <string name="emergency_calls">Tap for emergency calls</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="custom_message">Custom Message</string>
    <string name="create_custom_message">Create custom message</string>
    <string name="about_firstview">BeSafe is a smart android application developed to combat some of the major dangers facing women in major dangerous cities in the world.</string>
    <string name="about_secondview">Women are exposed to eminent dangers such as kidnapping, human trafficking, domestic violence, sexual harassment and rape just to mention a few ones and they need applications like BeSafe to mitigate the risk of becoming a victim of any of this dangers. BeSafe is designed to provide immediate help to women who are feeling unsafe or in danger.</string>
    <string name="about_thirdview">It also helps women living in dangerous cities to be safe by providing information on how to handle situations when they feel unsafe. Some sections in the application allow you to view stories of eye witnesses and heroes who has tackled unsafe situations and emerged triumphant.</string>
    <string name="about_fourthview">BeSafe provide a means of generating alerts, registering legal cases, providing financial help, conducting campaigns for society awareness, and collaborating with on-ground volunteers. Our year-wise report features of incidents of violence and abuse in city provides vast and updated information of dangers to women in all ramifications.</string>
</resources>
